--- a/chat_client.html
+++ b/chat_client.html
@@ -5,22 +5,22 @@
 <script>
 $(function() {
     var data = {};
-/*    ws = new WebSocket("ws://192.168.1.72:8080/chat"); */
     ws = new WebSocket("ws://127.0.0.1:8080/chat");
     ws.onopen = function() {
-        ws.send('hi');
+        ws.send($('#username').val() + ';' + 'hi');
     };
     ws.onmessage = function(e) {
       $("#holder").append($('<p>'+e.data+'</p>'));
     };
     $('#sender').append($('<button/>').text('send').click(function(){
-        ws.send($('#message').val());
+        ws.send($('#username').val() + ';' + $('#message').val());
     }));
 });
 </script>
 </head>
 <body>
 <div id="sender">
+<input type="hidden" id="username" value="%s" />
 <input type="text" id="message" value="text" />
 </div>
 <h3>Messages</h3>
