--- a/chat_login.html
+++ b/chat_login.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-<form action="http://127.0.0.1:8080/login" method="POST" accept-charset="UTF-8">
+<form action="%s" method="POST" accept-charset="UTF-8">
 <lavel>Name: <input type="text" name="name" /></label>
 <input type="submit" value="login" />
 </form>
