--- a/chat_client.html
+++ b/chat_client.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+<script src="/js/jquery-1.12.4.min.js"></script>
 <script>
 var url      = "%s";
 var username = "%s";
