--- a/chat_client.html
+++ b/chat_client.html
@@ -2,6 +2,7 @@
 <html lang='ja'>
 <head>
     <meta charset='UTF-8'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>chat nomikai</title>
     <link rel='stylesheet' href='css/normalize.css'>
     <link rel='stylesheet' href='css/main.css'>
